--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
+<html><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FastFlix</title>
@@ -74,226 +72,110 @@
       background-color: #333;
     }
 
-    /* Estilos do modal de TV ao vivo */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.85);
-      z-index: 1000;
-      align-items: center;
-      justify-content: center;
-      animation: fadeIn 0.3s ease-in-out;
-    }
-
-    .modal-content {
-      background-color: #1c1c1c;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 1000px;
-      height: 85%;
-      max-height: 650px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-      animation: slideIn 0.3s ease-in-out;
-    }
-
-    .modal-header {
-      padding: 12px 20px;
-      background-color: #2a2a2a;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #333;
-    }
-
-    .modal-header h2 {
-      margin: 0;
-      font-size: 1.25rem;
-      font-weight: bold;
-    }
-
-    .modal-header button {
-      background: none;
-      border: none;
-      color: white;
-      font-size: 1.5rem;
-      cursor: pointer;
-      padding: 0 10px;
-    }
-
-    .modal-body {
-      display: flex;
-      flex: 1;
-      overflow: hidden;
-    }
-
-    .video-container {
-      flex: 3;
-      background: #000;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .video-container video {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: block;
-    }
-
-    .channel-list-container {
-      flex: 1;
-      background: #222;
-      overflow-y: auto;
-      padding: 12px;
-      border-left: 1px solid #333;
-    }
-
-    .channel-list-container ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .channel-list-container li {
-      display: flex;
-      align-items: center;
-      padding: 8px;
-      margin: 4px 0;
-      cursor: pointer;
-      border-radius: 4px;
-      transition: background-color 0.2s;
-    }
-
-    .channel-list-container li:hover {
-      background-color: #333;
-    }
-
-    .channel-list-container li.active {
-      background-color: #e50914;
-      color: white;
-    }
-
-    .channel-list-container img {
-      width: 36px;
-      height: 36px;
-      margin-right: 8px;
-      border-radius: 4px;
-      object-fit: cover;
-    }
-
-    .channel-search {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 12px;
-      border: none;
-      border-radius: 4px;
-      background: #333;
-      color: white;
-      font-size: 0.9rem;
-    }
-
-    .channel-search:focus {
-      outline: none;
-      background: #444;
-    }
-
-    /* Controles de vídeo personalizados para celular */
-    video::-webkit-media-controls-panel {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 8px;
-    }
-
-    video::-webkit-media-controls-play-button,
-    video::-webkit-media-controls-mute-button,
-    video::-webkit-media-controls-fullscreen-button {
-      min-width: 48px;
-      min-height: 48px;
-      margin: 0 4px;
-    }
-
     /* Responsividade */
     @media (max-width: 768px) {
-      .modal-content {
-        width: 98%;
-        height: 95%;
-        flex-direction: column;
-      }
-      .modal-body {
-        flex-direction: column;
-      }
-      .video-container {
-        flex: none;
-        height: 50%;
-      }
-      .channel-list-container {
-        flex: none;
-        height: 50%;
-        border-left: none;
-        border-top: 1px solid #333;
-      }
-      .modal-header h2 {
-        font-size: 1.1rem;
-      }
-      .modal-header button {
-        font-size: 1.25rem;
-      }
-      .channel-list-container li {
-        padding: 10px;
-      }
-      .channel-list-container img {
-        width: 32px;
-        height: 32px;
-      }
-      .channel-search {
-        padding: 10px;
-        font-size: 0.85rem;
-      }
-      .hamburger {
+    .hamburger {
         display: block;
-      }
-      .logo {
+    }
+    .logo {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-      }
-      .profile-section-desktop {
+    }
+    .profile-section-desktop {
         position: absolute;
         right: 15px;
         top: 50%;
         transform: translateY(-50%);
-      }
-      #user-name {
+    }
+
+    /* Ocultar user-name no mobile */
+    #user-name {
         display: none;
+    }
+    }
+      /* Estilos específicos para a página de TV */
+    .tv-container {
+      display: flex;
+      height: 100vh;
+      flex-direction: row;
+    }
+    .video-main {
+      flex-grow: 1;
+      background-color: #000;
+    }
+    #channel-list-sidebar {
+      width: 320px;
+      background-color: #1f1f1f;
+      padding: 1rem;
+      overflow-y: auto;
+      border-left: 1px solid #333;
+    }
+    #channel-list-sidebar ul li {
+      padding: 0.75rem;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    #channel-list-sidebar ul li:hover, #channel-list-sidebar ul li.active {
+      background-color: #e50914;
+    }
+    @media (max-width: 768px) {
+      .max-w-6xl.mx-auto.p-4 {
+          padding: 1rem;
       }
-      video::-webkit-media-controls-panel {
-        height: 56px;
+      #search, #category-filter {
+          padding: 0.75rem;
+          font-size: 1rem;
       }
-      video::-webkit-media-controls-play-button,
-      video::-webkit-media-controls-mute-button,
-      video::-webkit-media-controls-fullscreen-button {
-        min-width: 56px;
-        min-height: 56px;
+      .channel-list {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 1rem;
+      }
+      .pagination button {
+          padding: 0.75rem 1.25rem;
+          font-size: 0.9rem;
+      }
+      .tv-container {
+        flex-direction: column;
+      }
+      #channel-list-sidebar {
+        width: 100%;
+        height: 60%;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        transform: translateY(100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 30;
+        border-top: 1px solid #333;
+      }
+      #channel-list-sidebar.show {
+        transform: translateY(0);
       }
     }
-
-    /* Animações */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    .episode-toggle-button {
+        display: none; /* Hidden on desktop */
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 0.5rem 1rem;
+        border-radius: 9999px;
+        text-decoration: none;
+        font-size: 0.9rem;
+        z-index: 20;
+        border: 1px solid white;
     }
 
-    @keyframes slideIn {
-      from { transform: translateY(-20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+    @media (max-width: 768px) {
+        .episode-toggle-button {
+            display: block;
+        }
+    }
+    #modal-episodes li.active {
+        background-color: #e50914;
+        font-weight: bold;
     }
   </style>
 </head>
@@ -307,13 +189,21 @@
 
   <!-- Navbar -->
   <div class="navbar" id="main-nav">
+    <!-- Hambúrguer (esquerda mobile) -->
     <i class="fas fa-bars hamburger" onclick="toggleMenu()"></i>
+
+    <!-- Logo (centro mobile, esquerda desktop) -->
     <div class="logo">FastFlix</div>
+
+    <!-- Links -->
     <div class="nav-links" id="nav-links">
-      <a href="#" id="filmes-tab" class="active">Filmes</a>
-      <a href="#" id="series-tab">Séries</a>
-      <a href="#" id="tv-tab">TV ao Vivo</a>
+      <a href="#" onclick="switchTab('filmes')" id="filmes-tab" class="active">Filmes</a>
+      <a href="#" onclick="switchTab('series')" id="series-tab">Séries</a>
+      <a href="#" onclick="switchTab('tv')" id="tv-tab">TV ao Vivo</a>
+      <!-- Botões mobile -->
     </div>
+
+    <!-- Perfil (direita sempre) -->
     <div class="profile-section-desktop">
       <div class="profile-dropdown">
         <div class="profile-info" onclick="toggleDropdown(event)">
@@ -331,12 +221,15 @@
 
   <!-- Conteúdo principal -->
   <div class="max-w-6xl mx-auto p-4">
-    <input type="text" id="search" placeholder="Buscar..." class="w-full p-3 bg-gray-800 text-white border-none rounded-md mb-6 focus:outline-none">
+    <input type="text" id="search" placeholder="Buscar..." class="w-full p-3 bg-gray-800 text-white border-none rounded-md mb-6 focus:outline-none" oninput="filterItems()">
+
     <div id="filters" class="flex gap-4 mb-6">
       <select id="category-filter" class="bg-gray-800 text-white p-2 rounded-md focus:outline-none">
         <option value="">Todas as Categorias</option>
       </select>
+      
     </div>
+
     <div id="categories">
       <div class="category active" id="filmes-category">
         <h2>Filmes</h2>
@@ -356,36 +249,41 @@
     </div>
   </div>
 
-  <!-- TV Player Modal -->
-  <div id="tv-player-modal" class="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2>Canais ao Vivo</h2>
-        <button id="close-tv-player-btn">&times;</button>
-      </div>
-      <div class="modal-body">
-        <div class="video-container">
-          <video id="tvPlayer" controls autoplay></video>
-        </div>
-        <div class="channel-list-container">
-          <input type="text" id="tv-channel-search" class="channel-search" placeholder="Pesquisar canais...">
-          <ul id="tv-channel-list"></ul>
+  <!-- TV Player Container -->
+  <div id="tv-player-container" style="display: none;">
+    <div class="tv-container">
+      <div class="video-main">
+        <div class="video-container" style="height:100vh; position: relative;">
+          <a href="#" onclick="switchTab('filmes')" class="back-button">Voltar</a>
+          <video id="tvPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
+          <button id="toggle-channels-btn" class="episode-toggle-button">Canais</button>
         </div>
       </div>
+      <aside id="channel-list-sidebar">
+        <div style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 1rem;">
+            <h3 class="text-lg font-bold">Canais ao Vivo</h3>
+            <button id="close-channels-btn" class="text-white text-2xl" style="background: none; border: none; cursor: pointer;">&times;</button>
+        </div>
+        <input type="text" id="channel-search-tv" placeholder="Buscar canal..." class="w-full p-2 bg-gray-700 rounded mb-4">
+        <ul id="channel-list-tv" class="space-y-2" style="max-height: calc(100vh - 120px); overflow-y: auto;">
+          <!-- Lista de canais será populada via JS -->
+          <li class="text-gray-400">Carregando canais...</li>
+        </ul>
+      </aside>
     </div>
   </div>
 
   <!-- Series Player Modal -->
   <div id="series-player-modal" class="modal">
-    <div class="modal-content">
-        <div class="video-container" style="height: 60%;">
-            <video id="seriesVideoPlayer" controls autoplay></video>
-            <button class="back-button" id="close-series-player-btn">Voltar</button>
+    <div class="modal-content" style="display: flex; flex-direction: column; max-width: 80vw; max-height: 80vh; width: 100%; height: 100%; padding: 0; background-color: #1f1f1f;">
+        <div class="video-container" style="width: 100%; height: 60%; background-color: black; position: relative;">
+            <video id="seriesVideoPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
+            <a href="#" onclick="closeSeriesPlayerModal()" class="back-button" style="position: absolute; top: 1rem; left: 1rem; z-index: 1;">Voltar</a>
         </div>
-        <div class="episodes-container" style="height: 40%;">
-            <h2 id="series-modal-title"></h2>
-            <div id="season-selector"></div>
-            <div id="modal-episodes"></div>
+        <div class="episodes-container" style="width: 100%; height: 40%; padding: 1rem; overflow-y: auto;">
+            <h2 id="series-modal-title" class="text-2xl font-bold mb-4"></h2>
+            <div id="season-selector" class="mb-4"></div>
+            <div id="modal-episodes" class="overflow-y-auto" style="max-height: calc(100% - 100px);"></div>
         </div>
     </div>
   </div>
@@ -393,8 +291,8 @@
   <!-- Movie Player Modal -->
   <div id="movie-player-modal" class="modal">
     <div class="video-container" style="width: 100%; height: 100%;">
-        <video id="movieVideoPlayer" controls autoplay></video>
-        <button class="back-button" id="close-movie-player-btn">Voltar</button>
+      <a href="#" onclick="closeMoviePlayerModal()" class="back-button">Voltar</a>
+      <video id="movieVideoPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
     </div>
   </div>
 
@@ -424,27 +322,36 @@
 
     if (protectedPages.includes(currentPage)) {
       onAuthStateChanged(auth, async (user) => {
+        console.log("onAuthStateChanged triggered. User:", user ? user.uid : "null");
         if (!user) {
+          console.log("No user found, redirecting to login.html");
           window.location.href = 'login.html';
         } else {
+          console.log("User authenticated. Checking status...");
           const userRef = ref(db, `users/${user.uid}`);
           const snapshot = await get(userRef);
 
           if (snapshot.exists()) {
             const userData = snapshot.val();
+            console.log("User data from DB:", userData);
             const isExpired = userData.expirationDate && new Date(userData.expirationDate) < new Date();
 
             if (userData.status === 'blocked') {
+              console.log("Account blocked. Signing out and redirecting.");
               alert('Sua conta está bloqueada. Entre em contato com o suporte.');
               signOut(auth);
               window.location.href = 'login.html';
             } else if (isExpired) {
+              console.log("Account expired. Showing modal.");
               document.getElementById('expired-account-modal').style.display = 'flex';
-              document.body.style.visibility = 'visible';
+              document.body.style.visibility = 'visible'; // Make body visible to show the modal
             } else {
+              console.log("Account active. Making body visible.");
               document.body.style.visibility = 'visible';
             }
           } else {
+            console.log("User exists in Auth but not in DB. Signing out and redirecting.");
+            // User exists in Auth but not in Realtime Database, might be an old or invalid account
             alert('Sua conta não foi encontrada ou está inválida. Entre em contato com o suporte.');
             signOut(auth);
             window.location.href = 'login.html';
@@ -452,9 +359,11 @@
         }
       });
     } else {
+      console.log("Page not protected, making body visible.");
       document.body.style.visibility = 'visible';
     }
 
+    // Função para togglar o menu hambúrguer
     window.toggleMenu = function() {
       const navLinks = document.querySelector('#nav-links');
       if (navLinks) {
@@ -462,22 +371,19 @@
       }
     };
 
-    window.toggleDropdown = function(event) {
-      event.stopPropagation();
-      const dropdown = document.getElementById('dropdown-content');
-      dropdown.classList.toggle('show');
-    };
-
-    document.addEventListener('click', (event) => {
-      const dropdown = document.getElementById('dropdown-content');
-      const profileInfo = document.querySelector('.profile-info');
-      if (profileInfo && !profileInfo.contains(event.target) && dropdown.classList.contains('show')) {
-        dropdown.classList.remove('show');
-      }
+    // Fechar o menu ao clicar em um link
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('#nav-links a').forEach(link => {
+        link.addEventListener('click', () => {
+          const navLinks = document.querySelector('#nav-links');
+          if (navLinks && navLinks.classList.contains('nav-active')) {
+            navLinks.classList.remove('nav-active');
+          }
+        });
+      });
     });
-
   </script>
   <script src="auth.js" type="module"></script>
   <script src="player.js" type="module"></script>
-</body>
-</html>
+
+</body></html>
